app-manifests/python-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: adarlan/python-app:master
        ports:
        - name: web
          containerPort: 80
        - name: metrics
          containerPort: 8000
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 150Mi
            cpu: 150m
        livenessProbe:
          httpGet:
            port: web # TODO expose a specific port for healthcheck
            path: /
          initialDelaySeconds: 30
          periodSeconds: 10
