app-manifests/python-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
  labels:
    app: python-app
spec:
  selector:
    app: python-app
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: web
  - name: metrics
    port: 8000
    protocol: TCP
    targetPort: metrics
