app-manifests/python-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /python-app(/|$)(.*)
        backend:
          service:
            name: python-app
            port: 
              name: web
